--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,14 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 a {
   text-decoration: none;
 }
